# fw4spl-droid

./: .fw4spl  .hgignore  .hgtags  CHANGELOG.md  CMakeLists.txt  README.md
Apps/DesktopTrackingQt/: Properties.cmake
Apps/DesktopTrackingQt/rc/: plugin.xml
Apps/DroidRender/: CMakeLists.txt  Properties.cmake
Apps/DroidRender/rc/: plugin.xml
Apps/DroidSimpleGui/: CMakeLists.txt  Properties.cmake
Apps/DroidSimpleGui/rc/: plugin.xml
Apps/DroidSimpleQt/: CMakeLists.txt  Properties.cmake
Apps/DroidSimpleQt/rc/: plugin.xml
Apps/DroidTracking/: CMakeLists.txt  Properties.cmake
Apps/DroidTracking/rc/: AndroidManifest.xml  plugin.xml
Apps/DroidTrackingQt/: CMakeLists.txt  Properties.cmake
Apps/DroidTrackingQt/rc/: AndroidManifest.xml  plugin.xml
Apps/PoC09Android/: CMakeLists.txt  Properties.cmake
Apps/PoC09Android/rc/: plugin.xml
Bundles/LeafTools/droidTools/: Properties.cmake
Bundles/LeafTools/droidTools/include/droidTools/: Plugin.hpp  STransformManager.hpp  namespace.hpp
Bundles/LeafTools/droidTools/rc/: plugin.xml
Bundles/LeafTools/droidTools/src/droidTools/: Plugin.cpp  STransformManager.cpp
Bundles/LeafUI/guiAndroid/: CMakeLists.txt  Properties.cmake
Bundles/LeafUI/guiAndroid/include/guiAndroid/: Plugin.hpp  namespace.hpp
Bundles/LeafUI/guiAndroid/rc/: plugin.xml
Bundles/LeafUI/guiAndroid/src/guiAndroid/: Plugin.cpp
Bundles/LeafUI/uiDroid/: CMakeLists.txt  Properties.cmake
Bundles/LeafUI/uiDroid/include/uiDroid/: Plugin.hpp  SButton.hpp
Bundles/LeafUI/uiDroid/rc/: plugin.xml
Bundles/LeafUI/uiDroid/src/uiDroid/: Plugin.cpp  SButton.cpp
Bundles/LeafUI/uiDroidQt/: CMakeLists.txt  Properties.cmake
Bundles/LeafUI/uiDroidQt/include/uiDroidQt/: Plugin.hpp  SOrganMaterialEditor.hpp  STransformEditor.hpp  namespace.hpp
Bundles/LeafUI/uiDroidQt/rc/: plugin.xml
Bundles/LeafUI/uiDroidQt/src/uiDroidQt/: Plugin.cpp  SOrganMaterialEditor.cpp  STransformEditor.cpp
Bundles/LeafVisu/visuVTKAndroid/: CMakeLists.txt  Properties.cmake
Bundles/LeafVisu/visuVTKAndroid/include/visuVTKAndroid/: Plugin.hpp  VtkRenderWindowInteractorManager.hpp  namespace.hpp
Bundles/LeafVisu/visuVTKAndroid/rc/: plugin.xml
Bundles/LeafVisu/visuVTKAndroid/src/visuVTKAndroid/: Plugin.cpp  VtkRenderWindowInteractorManager.cpp
Bundles/LeafVisu/visuVTKDroidAdaptor/: CMakeLists.txt  Properties.cmake
Bundles/LeafVisu/visuVTKDroidAdaptor/include/visuVTKDroidAdaptor/: InteractorStyle.hpp  Plugin.hpp  SMesh.hpp  STransform.hpp  SVideoAdapter.hpp
Bundles/LeafVisu/visuVTKDroidAdaptor/rc/: plugin.xml
Bundles/LeafVisu/visuVTKDroidAdaptor/src/visuVTKDroidAdaptor/: InteractorStyle.cpp  Plugin.cpp  SMesh.cpp  STransform.cpp  SVideoAdapter.cpp
Bundles/LeafVisu/visuVideoAndroid/: CMakeLists.txt  Properties.cmake
Bundles/LeafVisu/visuVideoAndroid/include/visuVideoAndroid/: Namespace.hpp  Plugin.hpp
Bundles/LeafVisu/visuVideoAndroid/rc/: plugin.xml
Bundles/LeafVisu/visuVideoAndroid/src/visuVideoAndroid/: Plugin.cpp
Bundles/core/guiDroid/: CMakeLists.txt  Properties.cmake
Bundles/core/guiDroid/include/guiDroid/: Plugin.hpp  SManager.hpp
Bundles/core/guiDroid/rc/: plugin.xml
Bundles/core/guiDroid/src/guiDroid/: Plugin.cpp  SManager.cpp
CMake/android/: ant_build.cmake  build.gradle  droid_apk.cmake  droid_builder.cmake.in  droid_config.cmake  droid_setup.cmake  gradle_build.cmake  helper.cmake
CMake/android/toolchains/: android-arm-api21-clang-ndk.cmake  android-arm-api21-gcc-ndk.cmake  android-ndk-arm-api21-clang.cmake  android-ndk-arm-api21-gcc.cmake
SrcLib/arAndroidTools/: CMakeLists.txt
SrcLib/arAndroidTools/bindings/android/: FwCamera.java
SrcLib/arAndroidTools/include/arAndroidTools/: Camera.hpp  Namespace.hpp
SrcLib/arAndroidTools/src/arAndroidTools/: Camera.cpp
SrcLib/droidPlugin/: CMakeLists.txt  Properties.cmake
SrcLib/droidPlugin/include/droidPlugin/: DroidBackingstore.hpp  DroidContext.hpp  DroidEvent.hpp  DroidIntegration.hpp  DroidScreen.hpp  DroidTheme.hpp  DroidWindow.hpp
SrcLib/droidPlugin/src/droidPlugin/: DroidBackingstore.cpp  DroidContext.cpp  DroidEvent.cpp  DroidIntegration.cpp  DroidPlugin.json  DroidScreen.cpp  DroidTheme.cpp  DroidWindow.cpp  main.cpp
SrcLib/fwAndroid/: CMakeLists.txt  Properties.cmake
SrcLib/fwAndroid/include/fwAndroid/: WorkerDroid.hpp
SrcLib/fwAndroid/src/fwAndroid/: WorkerDroid.cpp
SrcLib/fwGuiAndroid/: CMakeLists.txt  Properties.cmake
SrcLib/fwGuiAndroid/include/fwGuiAndroid/: namespace.hpp
SrcLib/fwGuiAndroid/include/fwGuiAndroid/builder/: ContainerBuilder.hpp
SrcLib/fwGuiAndroid/include/fwGuiAndroid/container/: DroidContainer.hpp
SrcLib/fwGuiAndroid/include/fwGuiAndroid/layoutManager/: FrameLayoutManager.hpp
SrcLib/fwGuiAndroid/src/fwGuiAndroid/builder/: ContainerBuilder.cpp
SrcLib/fwGuiAndroid/src/fwGuiAndroid/container/: DroidContainer.cpp
SrcLib/fwGuiAndroid/src/fwGuiAndroid/layoutManager/: FrameLayoutManager.cpp
launcherDroid/: CMakeLists.txt  Properties.cmake
launcherDroid/bindings/: LauncherActivity.java
launcherDroid/src/: ProfileRunner.cpp
(+2 files in other folders)
